--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -66,7 +66,7 @@
                 <div class="card"></div>
             </div>
             <div class="table">
-                <header></header>
+                <header>Data Warga Desa Segaran</header>
                 <div class="sort"></div>
                 <div class="data"></div>
 
