--- a/password-reset/index.html
+++ b/password-reset/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../assets/styles/password-reset.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Segaran App | Login</title>
@@ -10,7 +10,7 @@
   <body>
     <div class="container" style="height: 25rem">
       <div class="container2">
-        <img src="Vector.png" alt="logo" width="36rem" height="36rem" />
+        <img src="../assets/img/icons/segaran-icon.png" alt="logo" width="36rem" height="36rem" />
       </div>
       <p class="a">Dashboard Segaran</p>
       <h1>Atur Ulang Kata Sandi</h1>
