--- a/signup/index.html
+++ b/signup/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../assets/styles/signup.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Segaran App | Login</title>
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="container2">
-        <img src="Vector.png" alt="logo" width="36rem" height="36rem" />
+        <img src="../assets/img/icons/segaran-icon.png" alt="logo" width="36rem" height="36rem" />
       </div>
       <p class="a">Dashboard Segaran</p>
       <h1>Login to Dashboard Segaran</h1>
@@ -46,7 +46,7 @@
               <span class="slider round"></span>
             </label>
             <label for="" style="font-size: 0.6rem">ingat saya</label>
-            <a style="color: #2489f4; margin-left: 50%; font-size: 0.7rem" href="/segaran-app/login/">login</a>
+            <a style="color: #2489f4; margin-left: 50%; font-size: 0.7rem" href="../login/">login</a>
           </div>
           <div>
             <input
