a little bug, but atleast its a  progress??

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -26,9 +26,20 @@
             <img src="../assets/img/icons/menu-toggle.png" alt="" width="50" id="menu-toggle" class="button">
         </div>
 
-        <div id="nav">
-
-        </div>
+        <nav id="nav">
+            <ul>
+                <li id="dashboard" class="button">
+                    <span id="pointer"></span>
+                    <img src="../assets/img/icons/home.png" alt="" width="30">
+                    <span navHide>Dashboard</span>
+                </li>
+                <li id="statistik" class="button">
+                    <span id="pointer"></span>
+                    <img src="../assets/img/icons/folder.png" alt="" width="30">
+                    <span navHide>Statistik</span>
+                </li>
+            </ul>
+        </nav>
 
         <button id="keluar" class="button" navHide="">
             Keluar
@@ -62,13 +73,22 @@
 
         <section>
             <div class="card-container">
-                <div class="card">
+                <div id="card-1"class="card">
                     <h2>Jumlah Dusun</h1>
+                    <h1 value="60">60</h1>
+                </div>
+                <div id="card-2"class="card">
+                    <h2>Jumlah RW</h1>
                     <h1>60</h1>
                 </div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div id="card-3"class="card">
+                    <h2>Jumlah RT</h1>
+                    <h1>60</h1>
+                </div>
+                <div id="card-4"class="card">
+                    <h2>Jumlah Penduduk</h1>
+                    <h1>60</h1>
+                </div>
             </div>
             <div class="table">
                 <head>Data Warga Desa  Segaran</head>
