--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -28,15 +28,20 @@
 
         <nav id="nav">
             <ul>
-                <li id="dashboard" class="button">
-                    <span id="pointer"></span>
-                    <img src="../assets/img/icons/home.png" alt="" width="30">
+                <li id="dashboard" class="button" chosen="true">
+                    <a href=".">
+                    <span id="pointer" hidden></span>
+
+                        <img src="../assets/img/icons/home.png" alt="" width="30">
                     <span navHide>Dashboard</span>
+                    </a>
                 </li>
                 <li id="statistik" class="button">
-                    <span id="pointer"></span>
-                    <img src="../assets/img/icons/folder.png" alt="" width="30">
-                    <span navHide>Statistik</span>
+                    <a href="">
+                        <span id="pointer" hidden></span>
+                        <img src="../assets/img/icons/folder.png" alt="" width="30">
+                        <span navHide>Statistik</span>
+                    </a>
                 </li>
             </ul>
         </nav>
