--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../assets/styles/login.css" />
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Segaran App | Login</title>
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="container2">
-        <img src="../assets/img/icons/segaran-icon.png" alt="logo" width="36rem" height="36rem" />
+        <img src="Vector.png" alt="logo" width="36rem" height="36rem" />
       </div>
       <p class="a">Dashboard Segaran</p>
       <h1>Login to Dashboard Segaran</h1>
@@ -40,13 +40,13 @@
               <span class="slider round"></span>
             </label>
             <label for="" style="font-size: 0.6rem">ingat saya</label>
-            <a style="color: #2489f4; margin-left: 30%; font-size: 0.7rem" href="..//password-reset/">lupa password?</a>
+            <a style="color: #2489f4; margin-left: 40%; font-size: 0.7rem" href="/segaran-app/password-reset/">lupa password?</a>
           </div>
           <div>
             <input
               type="submit"
               value="MASUK"
-              style="font-family: 'Poppins'; width: 7.5rem; height: 1.5rem; margin-top: 10%; margin-left: 23%; color: white; border-radius: 5px; border-width: 0px; background-color: #2489f4; cursor: pointer"
+              style="font-family: 'Poppins'; width: 7.5rem; height: 1.5rem; margin-top: 10%; margin-left: 28%; color: white; border-radius: 5px; border-width: 0px; background-color: #2489f4; cursor: pointer"
             />
           </div>
         </form>
